--- a/packages/amis-ui/scss/themes/_common.scss
+++ b/packages/amis-ui/scss/themes/_common.scss
@@ -85,6 +85,7 @@
 @import '../components/grid-nav';
 @import '../components/shape';
 @import '../components/slider';
+@import '../components/horizontal-scroll';
 
 @import '../components/form/fieldset';
 @import '../components/form/group';
